refactor: Convention